--- a/source/template/pages/skills.pug
+++ b/source/template/pages/skills.pug
@@ -5,7 +5,7 @@ head
   meta(name="viewport",content="width=device-width")
   link(href="assets/css/normalize.css", rel="stylesheet")
   link(href="assets/css/main.css", rel="stylesheet")
-  link(href="assets/css/myworks.css", rel="stylesheet")
+  link(href="assets/css/skills.css", rel="stylesheet")
   link(href="assets/css/font-awesome.css", rel="stylesheet")
 body
   .wrapper
@@ -57,4 +57,5 @@ body
             li
             li
             li
-       .map
+        .map
+
