--- a/source/template/pages/skills.pug
+++ b/source/template/pages/skills.pug
@@ -22,6 +22,7 @@ body
         img.photo(src="#", alt="Logo")
         p.name Александр Прикотов
         p.sitetitle Личный сайт веб-разработчика
+      image.down-arrow(src="" alt="down-arrow")
       .box
         svg.triangle(xmlns="http://www.w3.org/2000/svg", viewbox="0 0 1000 85", preserveaspectratio="none")
           polygon(points="0,0   0,86   500.8,86   500.8,75.5")
@@ -33,7 +34,7 @@ body
             h1.page-title Обо мне
               hr.horizontal-line
           .description-block
-            img(src='#')
+            img(src='assets/img/fashmark-men-trends-nature1.png')
             h2.description-block-title Кто я
               hr.horizontal-line
             p.skills-about-me Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aut commodi dignissimos distinctio eveniet modi necessitatibus odio pariatur perferendis possimus, reprehenderit sequi similique soluta temporibus ullam velit veritatis voluptas, voluptatibus.
@@ -48,14 +49,39 @@ body
             li
           h3.skills-frontend Backend
           ul.skills-circkles
-            li
-            li
-            li
-            li
+            li hfp
+            li df
+            li dfsd
+            li dfs
           h3.skills-frontend Workflow
           ul.skills-circkles
             li
             li
             li
-        .map
+    #map
+    .footer-template
+      .left-part
+        p.i-did Это я сделал в рамках обучеlal la la la l alldlkjk dkdk ljljs lal la la la l alldlkjk dkdk ljljs ния в LoftSchool"
+      .center-part
+        ul.nav-menu
+          li Мои работы
+          li Обо мне
+          li Блог
+          li Авторизация
+        .social-btns
+          a.vk(href="#")
+            i.fa.fa-vk(aria-hidden="true")
+          a.git(href="#")
+            i.fa.fa-github-alt(aria-hidden="true")
+          a.in(href="#")
+            i.fa.fa-linkedin(aria-hidden="true")
+      .right-part
+        p.quote Lal lal la la la l alldlkjk dkdk ljljs sjhdshd
+          span
+            | - Who say
+
+
+
+<script type="text/javascript" src="assets/js/google_maps.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTR4SmCGot4Blf76TpDziAKP7-rHwts9A&callback=initMap">
 
