--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -1,21 +1,22 @@
 html {
+  height: 100%;
+  body {
+    background: url('../img/back.png') no-repeat;
+    background-size: 100% 100%;
     height: 100%;
-    body {
-	  	background: url('img/back.png') no-repeat;
-  		background-size: 100% 100%;
-  		height: 100%;
-  
-  		.wrapper {
-	  	min-height: 100%;
-  		position: relative;
-		}
+    padding: 0;
+    margin: 0;
 
-		.wrapper:after {
-  		display: table;
-	  	clear: both;
-  		content: "";
-		}
-	}
+    .wrapper {
+    position: relative;
+    }
+
+    .wrapper:after {
+    display: table;
+    clear: both;
+    content: "";
+    }
+  }
 
 }
 
