--- a/source/style/main.css
+++ b/source/style/main.css
@@ -3,7 +3,7 @@ html {
   html body {
     background: url("../img/back.png") no-repeat;
     background-size: 100% 100%;
-    height: 100%;
+    min-height: 100%;
     padding: 0;
     margin: 0; }
     html body .wrapper {
@@ -12,5 +12,8 @@ html {
       display: table;
       clear: both;
       content: ""; }
+  html p {
+    margin: 0;
+    padding: 0; }
 
 /*# sourceMappingURL=main.css.map */
