--- a/source/style/main.scss
+++ b/source/style/main.scss
@@ -3,7 +3,7 @@ html {
   body {
     background: url('../img/back.png') no-repeat;
     background-size: 100% 100%;
-    height: 100%;
+    min-height: 100%;
     padding: 0;
     margin: 0;
 
@@ -17,7 +17,10 @@ html {
     content: "";
     }
   }
-
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 
