--- a/source/style/myworks.scss
+++ b/source/style/myworks.scss
@@ -1,30 +1,21 @@
-html {
-  height: 100%;
-}
-
-
-
 
 body {
   height: 100%;
-  background: none;
-  margin: 0;
+
 }
 
 
-.wrapper {
-  background: url('../img/back.png') no-repeat;
-  background-size: 100% 600px;
-  z-index: 10000;
-}
+
+
 .promo {
+  background: url('../img/back.png');
+  background-repeat:  no-repeat;
   background-size: 100% 600px;
-  margin-bottom: 0;
   color: white;
 
   .box {
-    margin: 158px auto 25px auto;
-    z-index: 10000;
+    margin: 175px auto 25px auto;
+
   }
 
   .triangle {
@@ -79,9 +70,10 @@ body {
   }
 }
 
-.content {
+.my-work {
   background-image: url('../img/form_back.png');
-  background-position: 0 -600px;
+  background-position-y: -600px;
+
 
   &:after {
     display: table;
@@ -184,142 +176,211 @@ body {
       min-height: 750px;
       background-color: rgb(225, 228, 215);
 
-      .presentation-inner{
+      .presentation-inner {
         position: absolute;
+        width: 100%;
+        padding-top: 65px;
 
-      }
-    }
-  }
+        .big-demo {
+          margin-bottom: 85px;
+          img {
+            display: block;
+            margin: 0 auto;
 
-
-  .aboutme-block {
-    width: 41.6%;
-    margin: 0 auto 25px auto;
-    &:after {
-      display: table;
-      clear: both;
-      content: "";
-    }
-
-
-    .aboutme-title {
-      width: 500px;
-      font-size: 50px;
-      margin: 0 auto;
-      text-align: center;
-      text-transform: uppercase;
-
-    }
-    .aboutme-people {
-      display: inline;
-      margin-bottom: 70px;
-
-      &:after {
-        display: table;
-        clear: both;
-        content: "";
-      }
-
-      .aboutme-people-left {
-        float: left;
-        width: 49%;
-        text-align: center;
-      }
-      .aboutme-people-right {
-        float: right;
-        width: 49%;
-        text-align: center;
-      }
-    }
-  }
-  .contact-form {
-    .contact-form-inner {
-      padding-top: 40px;
-      text-align: center;
-      margin: 0 auto 100px auto;
-      width: 385px;
-      height: 465px;
-      border-radius: 5px;
-      background-color: rgba(232, 232, 238, .6);
-
-      .contact-form-title {
-        text-transform: uppercase;
-        margin: 0 auto;
-        text-align: center;
-        color: rgb(86, 99, 88);
-
-        .horizontal-line {
-          margin-bottom: 30px;
-          margin-top: 30px;
+          }
         }
       }
-      .contact-form-name,
-      .contact-form-email
-      {
-        width: 325px;
-        height: 45px;
-        border-radius: 20px;
-        border: none;
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        padding-left: 20px;
+    }
+  }
 
+  .small-demo {
+    width: 100%;
+    margin: 0 auto;
+    font-size: 0;
+
+    .arrow {
+      position: absolute;
+      left: 158px;
+      top: -100px;
+    }
+
+    .small-demo-left {
+      position: relative;
+      width:50%;
+      display: inline;
+
+      .small-demo-pic {
+        width: 360px;
       }
-      .contact-form-somewords {
-        width: 325px;
-        height: 170px;
-        border-radius: 20px;
-        border: none;
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        padding-left: 20px;
-        vertical-align: top;
-      }
-      .send-btn {
-        display: inline-block;
-        color: white;
-        width: 194px;
-        text-decoration: none;
-        vertical-align: middle;
-        height: 50px;
-        box-sizing: border-box;
-        border-right: 3px solid rgba(195, 197, 171, .5);
-        background-color: rgba(96, 142, 84, .6);
-        font-size: 16px;
-        text-align: center;
-        vertical-align: middle;
-        padding-top: 16px;
-        border-bottom-left-radius: 5px;
-      }
-      .clear-btn {
-        display: inline-block;
-        color: white;
-        width: 191px;
-        text-decoration: none;
-        vertical-align: middle;
-        height: 50px;
-        box-sizing: border-box;
-        background-color: rgba(96, 142, 84, .85);
-        font-size: 16px;
-        text-align: center;
-        vertical-align: middle;
-        padding-top: 16px;
-        border-right: none;
-        border-bottom-right-radius: 5px;
+
+    }
+    .small-demo-right {
+      position: relative;
+      width: 50%;
+      display: inline;
+      .small-demo-pic {
+        width: 360px;
 
       }
     }
   }
 }
 
+.aboutme-block {
+  width: 54%;
+  margin: 0 auto 70px auto;
+
+  &:after {
+    display: table;
+    clear: both;
+    content: "";
+  }
+
+
+  .aboutme-title {
+    width: 500px;
+    font-size: 50px;
+    margin: 0 auto;
+    text-align: center;
+    text-transform: uppercase;
+
+  }
+  .aboutme-people {
+    display: inline;
+    margin-bottom: 70px;
+
+    &:after {
+      display: table;
+      clear: both;
+      content: "";
+    }
+
+    .aboutme-people-left {
+      float: left;
+      font-size: 16px;
+      line-height: 24px;
+      width: 49%;
+      text-align: center;
+    }
+    .aboutme-people-right {
+      font-size: 16px;
+      line-height: 24px;
+      float: right;
+      width: 49%;
+      text-align: center;
+    }
+
+    .aboutme-people-quote {
+      margin-bottom: 25px;
+      font-style: italic;
+      color: rgb(93, 90, 85);
+    }
+
+    .aboutme-people-who {
+      margin-bottom: 12px;
+      line-height: 16px;
+      color: rgb(78, 136, 57);
+    }
+
+    .aboutme-people-whois {
+      color: rgb(55, 62, 66);
+      line-height: 16px;
+
+    }
+
+  }
+}
+.contact-form {
+  .contact-form-inner {
+    padding-top: 40px;
+    text-align: center;
+    margin: 0 auto 270px auto;
+    width: 385px;
+    height: 465px;
+    border-radius: 5px;
+    background-color: rgba(232, 232, 238, .6);
+
+    .contact-form-title {
+      text-transform: uppercase;
+      margin: 0 auto;
+      text-align: center;
+      color: rgb(86, 99, 88);
+
+      .horizontal-line {
+        margin-bottom: 30px;
+        margin-top: 30px;
+      }
+    }
+    .contact-form-name,
+    .contact-form-email {
+      width: 325px;
+      height: 45px;
+      border-radius: 20px;
+      border: none;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+      padding-left: 20px;
+
+    }
+    .contact-form-somewords {
+      width: 325px;
+      height: 170px;
+      border-radius: 20px;
+      border: none;
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+      padding-left: 20px;
+      vertical-align: top;
+    }
+    .send-btn {
+      display: inline-block;
+      color: white;
+      width: 194px;
+      text-decoration: none;
+      vertical-align: middle;
+      height: 50px;
+      box-sizing: border-box;
+      border-right: 3px solid rgba(195, 197, 171, .5);
+      background-color: rgba(96, 142, 84, .6);
+      font-size: 16px;
+      text-align: center;
+      padding-top: 16px;
+      border-bottom-left-radius: 5px;
+    }
+    .clear-btn {
+      display: inline-block;
+      color: white;
+      width: 191px;
+      text-decoration: none;
+      vertical-align: middle;
+      height: 50px;
+      box-sizing: border-box;
+      background-color: rgba(96, 142, 84, .85);
+      font-size: 16px;
+      text-align: center;
+      padding-top: 16px;
+      border-right: none;
+      border-bottom-right-radius: 5px;
+
+    }
+  }
+}
+.arrow-up-footer {
+  border: 0;
+  top: -200px;
+  right: -700px;
+  position: relative;
+}
+
+
 .footer-template {
   width: 100%;
-  height: 150px;
-  margin-bottom: 50px;
+  height: 190px;
   color: white;
-  background-color: rgba(54, 61, 64, .6);
+  background-color: rgba(54, 61, 64, 0.6);
+  margin-top: -150px;
 
   .left-part,
   .right-part,
@@ -330,6 +391,7 @@ body {
     box-sizing: border-box;
     margin-left: -2px;
     padding-left: 32px;
+    margin-top: 18px;
     font-size: 16px;
     line-height: 16px;
   }
@@ -370,9 +432,12 @@ body {
 .copyright {
   position: absolute;
   width: 100%;
-  height: 50px;
+  height: 40px;
   left: 0;
   bottom: 0;
-  margin-top: 200px;
+  margin-top: -70px;
   text-align: center;
+  background-color: rgba(98, 140, 83, 0.85);
+  line-height: 40px;
+  z-index: 10000;
 }
