--- a/source/template/pages/myworks.pug
+++ b/source/template/pages/myworks.pug
@@ -21,41 +21,53 @@ body
           polygon(points="0,0   0,86   500.8,86   500.8,75.5")
           polygon(points="1000,0   1000,86   500,86   500,75.5")
     .content
-      h1.page-title Мои работы
-      hr.horizontal-line
-      .works-block
-        .description
-          .description-inner
-            p.work-title Сайт школы онлайн образования
-            hr.horizontal-line
-            p.work-description html, css, javascript
-            a.work-site(href='#') Посмотреть сайт
-        .presentation
-          .presentation-inner
-      .aboutme-block
-        h1.aboutme-title Что обо мне говорят
+        .my-work
+          h1.page-title Мои работы
           hr.horizontal-line
-        .aboutme-people
-          .aboutme-people-left
-            img.aboutme-people-img(src='assets/img/dima.png', alt='Dima Avatar')
-            p.aboutme-people-quote Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, mollitia!
-            p.aboutme-people-who Дмитрий Ковальчук
-            p.aboutme-people-whois - основатель LoftSchool
-          .aboutme-people-right
-            img.aboutme-people-img(src='assets/img/zar.png', alt='Zar Avatar')
-            p.aboutme-people-quote Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, mollitia!
-            p.aboutme-people-who Зар Захаров
-            p.aboutme-people-whois - главный преподаватель LoftSchool
-      .contact-form
-        .contact-form-inner
-          h2.contact-form-title Связаться со мной
-            hr.horizontal-line
-          input.contact-form-name(type='text', placeholder='Имя')
-          input.contact-form-email(type='email', placeholder='Email')
-          input.contact-form-somewords(type='textarea', rowspan='6', placeholder='Ваше сообщение')
-          .contact-form-btns
-            a.send-btn(href='#') Отправить
-            a.clear-btn(href='#') Очистить
+          .works-block
+            .description
+              .description-inner
+                p.work-title Сайт школы онлайн образования
+                hr.horizontal-line
+                p.work-description html, css, javascript
+                a.work-site(href='#') Посмотреть сайт
+            .presentation
+              .presentation-inner
+                .big-demo
+                  img(src='assets/img/big_demo.png', alt='big demo')
+                .small-demo
+                  .small-demo-left
+                    img.small-demo-pic(src='assets/img/slide_down.png', alt='small demo')
+                    img.arrow(src='assets/img/arrow_down.png', alt='small demo')
+                  .small-demo-right
+                    img.small-demo-pic(src='assets/img/slide_up.png', alt='small demo')
+                    img.arrow(src='assets/img/arrow_up.png', alt='small demo')
+          .aboutme-block
+            h1.aboutme-title Что обо мне говорят
+              hr.horizontal-line
+            .aboutme-people
+              .aboutme-people-left
+                img.aboutme-people-img(src='assets/img/dima.png', alt='Dima Avatar')
+                p.aboutme-people-quote Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, mollitia!
+                p.aboutme-people-who Дмитрий Ковальчук
+                p.aboutme-people-whois - основатель LoftSchool
+              .aboutme-people-right
+                img.aboutme-people-img(src='assets/img/zar.png', alt='Zar Avatar')
+                p.aboutme-people-quote Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, mollitia!
+                p.aboutme-people-who Зар Захаров
+                p.aboutme-people-whois - главный преподаватель LoftSchool
+          .contact-form
+            .contact-form-inner
+              h2.contact-form-title Связаться со мной
+                hr.horizontal-line
+              input.contact-form-name(type='text', placeholder='Имя')
+              input.contact-form-email(type='email', placeholder='Email')
+              input.contact-form-somewords(type='textarea', rowspan='6', placeholder='Ваше сообщение')
+              .contact-form-btns
+                a.send-btn(href='#') Отправить
+                a.clear-btn(href='#') Очистить
+          img.arrow-up-footer(src='assets/img/arrow_up.png', alt='small demo')
+
     .footer-template
       .left-part
         p.i-did Это я сделал в рамках обучения в LoftSchool"
@@ -76,4 +88,4 @@ body
         p.quote Lal lal la la la l alldlkjk dkdk ljljs sjhdshd
           span
             | - Who say
-    include ../includes/footer.pug
+    .copyright Привет
